--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Samer Tauk – Head of Data Analytics & AI at Treegroup, Wharton graduate, World #1 in SQL HackerRank. Data visualization, analytics, and AI expert.">
-    <title>Samer Tauk – Head of Data Analytics & AI | Wharton Graduate | World #1 in SQL HackerRank</title>
+    <meta name="description" content="Samer Tauk – Head of Data Analytics & AI at Treegroup, Wharton School graduate, World #1 in SQL HackerRank, Delivering Data-Driven Business Solutions, AI & Data Strategy Leader, Python, Qlik, Tableau, SQL, SSIS, ETL, DWH">
+    <title>Samer Tauk – Head of Data Analytics & AI at treegroup | Wharton Graduate | World #1 in SQL HackerRank</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,16 +58,18 @@
 <body>
     <header>
         <h1>Samer Tauk</h1>
-        <p>Head of Data Analytics & AI | Wharton Graduate | World #1 in SQL HackerRank</p>
+        <p>Head of Data Analytics & AI at treegroup | Wharton Graduate | World #1 in SQL HackerRank</p>
     </header>
 
     <main>
         <section>
             <h2>About Me</h2>
-            <p>I am a data analytics and AI professional with extensive experience in <strong>data visualization, reporting, data manipulation, and data architecture</strong>. I specialize in turning complex datasets into actionable insights and have a proven track record in enterprise-level data solutions.</p>
+            <p>I am a Data Analytics and AI Engineer, leading the Data Analytics & AI at Treegroup. I design and implement robust, scalable data solutions, transforming complex datasets into actionable insights that drive measurable business impact. My expertise spans data visualization, reporting, data manipulation, data architecture, and AI-driven analytics. I am ranked #1 in SQL on HackerRank.</p>
+
+            
             <ul>
-                <li><strong>Current Role:</strong> Head of Data Analytics & AI at Treegroup</li>
-                <li><strong>Education:</strong> Wharton School</li>
+                <li><strong>Current Role:</strong> Head of Data Analytics & AI at treegroup</li>
+                <li><strong>Education:</strong> The Wharton School of the University of Pennsylvania</li>
                 <li><strong>Global Recognition:</strong> Ranked #1 worldwide in SQL on HackerRank</li>
             </ul>
         </section>
@@ -76,7 +78,7 @@
             <h2>Skills</h2>
             <ul>
                 <li>Data Visualization & Reporting: Qlik, Tableau, Power BI</li>
-                <li>Data Manipulation & Analysis: Python, SQL, Excel, Pandas, NumPy</li>
+                <li>Data Manipulation & Analysis: Python, R, SQL</li>
                 <li>Data Architecture & Engineering: ETL, Data Warehousing, SSIS, SSMS</li>
                 <li>Other Tools: Git, Jupyter, Cloud Platforms</li>
             </ul>
@@ -95,16 +97,6 @@
             <h2>Public Profiles</h2>
             <ul>
                 <li>LinkedIn: <a href="https://www.linkedin.com/in/samer-tauk" target="_blank">linkedin.com/in/samer-tauk</a></li>
-                <li>HackerRank: <a href="#" target="_blank">(Insert your profile link)</a></li>
-                <li>GitHub: <a href="#" target="_blank">(Insert your profile link)</a></li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Contact</h2>
-            <ul>
-                <li>Email: (your professional email)</li>
-                <li>Twitter / X: (optional)</li>
             </ul>
         </section>
     </main>
@@ -114,3 +106,4 @@
     </footer>
 </body>
 </html>
+
