--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Samer Tauk – Head of Data Analytics & AI at Treegroup, Wharton School graduate, World #1 in SQL HackerRank, Delivering Data-Driven Business Solutions, AI & Data Strategy Leader, Python, Qlik, Tableau, SQL, SSIS, ETL, DWH">
-    <title>Samer Tauk – Head of Data Analytics & AI at treegroup | Wharton Graduate | World #1 in SQL HackerRank</title>
+    <title>Samer Tauk – Head of Data Analytics & AI at treegroup | The Wharton School Graduate | World #1 in SQL HackerRank</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,7 +58,7 @@
 <body>
     <header>
         <h1>Samer Tauk</h1>
-        <p>Head of Data Analytics & AI at treegroup | Wharton Graduate | World #1 in SQL HackerRank</p>
+        <p>Head of Data Analytics & AI at Treegroup | The Wharton School Graduate | World #1 in SQL HackerRank</p>
     </header>
 
     <main>
@@ -68,7 +68,7 @@
 
             
             <ul>
-                <li><strong>Current Role:</strong> Head of Data Analytics & AI at treegroup</li>
+                <li><strong>Current Role:</strong> Head of Data Analytics & AI at Treegroup</li>
                 <li><strong>Education:</strong> The Wharton School of the University of Pennsylvania</li>
                 <li><strong>Global Recognition:</strong> Ranked #1 worldwide in SQL on HackerRank</li>
             </ul>
@@ -77,17 +77,21 @@
         <section>
             <h2>Skills</h2>
             <ul>
-                <li>Data Visualization & Reporting: Qlik, Tableau, Power BI</li>
+                <li>Data Visualization & Reporting: QlikSense, Tableau, Power BI</li>
                 <li>Data Manipulation & Analysis: Python, R, SQL</li>
                 <li>Data Architecture & Engineering: ETL, Data Warehousing, SSIS, SSMS</li>
-                <li>Other Tools: Git, Jupyter, Cloud Platforms</li>
+                <li>AI & Machine Learning: Predictive Analytics, Clustering, Classification, Regression</li>
+                <li>Other Tools & Platforms: Git, Jupyter, Cloud Platforms (AWS, Azure)</li>
             </ul>
         </section>
 
         <section>
             <h2>Achievements</h2>
             <ul>
-                <li>Built enterprise-level dashboards and analytics solutions at Treegroup</li>
+                <li>Designed and delivered scalable, enterprise-grade dashboards and analytics solutions at Treegroup, transforming complex data into actionable insights and enabling data-driven decision-making across the organization.</li>
+                <li>Data Analytics Professional Certificate from </li>
+                <li>Data Analytics Professional Certificate from </li>
+                <li>World #1 in SQL HackerRank</li>
                 <li>Consistently ranked among the top SQL practitioners globally</li>
                 <li>Contributor to data-driven strategy and AI implementation in distribution operations</li>
             </ul>
@@ -106,4 +110,5 @@
     </footer>
 </body>
 </html>
+
 
