--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
         <section>
             <h2>Achievements</h2>
             <ul>
-                <li>Designed and delivered **scalable, enterprise-grade dashboards and analytics solutions** at Treegroup, transforming complex data into actionable insights and enabling **data-driven decision-making** across the organization.</li>
-                <li>Ranked **#1 worldwide in SQL on HackerRank**</li>
-                <li>Earned **Data Analytics Professional Certificate**</li>
-                <li>Earned **Business Analytics Professional Certificate**</li>
-                <li>Consistently recognized among the **top SQL practitioners globally**</li>
-                <li>Contributed to **data-driven strategy and AI implementation** in distribution operations</li>
+                <li>Designed and delivered scalable, enterprise-grade dashboards and analytics solutions at Treegroup, transforming complex data into actionable insights and enabling data-driven decision-making across the organization.</li>
+                <li>Ranked #1 worldwide in SQL on HackerRank</li>
+                <li>Earned Data Analytics Professional Certificate</li>
+                <li>Earned Business Analytics Professional Certificate</li>
+                <li>Consistently recognized among the top SQL practitioners globally</li>
+                <li>Contributed to data-driven strategy and AI implementation in distribution operations</li>
             </ul>
         </section>
         
@@ -110,6 +110,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
