--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <main>
         <section>
             <h2>About Me</h2>
-            <p>I am a Data Analytics and AI Engineer, leading the Data Analytics & AI at Treegroup. I design and implement robust, scalable data solutions, transforming complex datasets into actionable insights that drive measurable business impact. My expertise spans data visualization, reporting, data manipulation, data architecture, and AI-driven analytics. I am ranked #1 in SQL on HackerRank.</p>
+            <p>I am a Data Analytics and AI Engineer, leading the Data Analytics & AI at Treegroup. I design and implement robust, scalable data solutions, transforming complex datasets into actionable insights that drive measurable business impact. My expertise spans data visualization, reporting, data manipulation, data architecture, and AI-driven analytics. I am ranked #1 worldwide in SQL on HackerRank.</p>
 
             
             <ul>
@@ -110,6 +110,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
